k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: student-backend:latest
          imagePullPolicy: IfNotPresent # 优先拉取本地镜像！非常重要的配置
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8080       # 服务端口
      targetPort: 8080 # Pod 中的容器端口
  selector:
    app: backend
  type: ClusterIP
